# cargo-wsinit

./: Cargo.toml
workspace/: Cargo.toml
wsinit/: Cargo.toml  README.md
wsinit/src/: lib.rs  options.rs  toml_editor.rs  toml_file.rs  workspace.rs
wsinit/tests/: workspace_creation_tests.rs  workspace_search_update_tests.rs
wsinit/tests/test_utils/: mod.rs  test_dir_change.rs  thread_test_path.rs
